--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
   <title>HTML Demo</title>
+  <h1>Manikanta Vasana</h1>
 </head>
 <body>
-    <h1>Manikanta Vasana</h1>
+    <h6>Favourite Place - Rajahmundry</h6>>
+    <p>Rajahmundry is best known for <b>"Cultural Capital of Andhra Pradesh.<b>it is also known for its history, <b>culture</b>, agriculture and its heritage</p>>
 </body>
 </html>
