--- a/index.html
+++ b/index.html
@@ -5,7 +5,22 @@
   <h1>Manikanta Vasana</h1>
 </head>
 <body>
-    <h6>Favourite Place - Rajahmundry</h6>>
-    <p>Rajahmundry is best known for <b>"Cultural Capital of Andhra Pradesh.<b>it is also known for its history, <b>culture</b>, agriculture and its heritage</p>>
+    <h6>Favourite Place - Rajahmundry</h6>
+    <p>Rajahmundry is best known for <b>"Cultural Capital of Andhra Pradesh"</b>.
+    it is also known for its history, <b>culture</b>, agriculture and its heritage.</p>
+
+    <hr>
+    <h3>Section with an ordered list</h3>
+    <ol>
+        <li>My Favourite Place is New york./li>
+        <li>first we need to book flight from MCI-Kansas Airport to Newyork.</li>
+        <li>There we need to get the UBER and start exporing the Newyork.</li>
+        <ol>
+            <li>Best places to visit<li>
+            <li>Times Square</li>
+            <li>Statue of Liberty</li>
+        </ol>
+        <li>New york is the best city in USA for the celebrations.</li>
+    </ol> 
 </body>
 </html>
