--- a/index.html
+++ b/index.html
@@ -4,23 +4,79 @@
   <title>HTML Demo</title>
   <h1>Manikanta Vasana</h1>
 </head>
+
 <body>
     <h6>Favourite Place - Rajahmundry</h6>
     <p>Rajahmundry is best known for <b>"Cultural Capital of Andhra Pradesh"</b>.
     it is also known for its history, <b>culture</b>, agriculture and its heritage.</p>
 
     <hr>
-    <h3>Section with an ordered list</h3>
+    <h3>Ordered list</h3>
     <ol>
-        <li>My Favourite Place is New york./li>
+        <li>My Favourite Place is New york.</li>
         <li>first we need to book flight from MCI-Kansas Airport to Newyork.</li>
         <li>There we need to get the UBER and start exporing the Newyork.</li>
         <ol>
-            <li>Best places to visit<li>
+            <li>Best places to visit</li>
             <li>Times Square</li>
             <li>Statue of Liberty</li>
         </ol>
         <li>New york is the best city in USA for the celebrations.</li>
     </ol> 
+
+    <h3>Unordered list</h3>
+<ul>
+        <li>Vizag - City of Destiny</li>
+    <ul>
+            <li>RK Beach</li>
+        <ul>
+            <li>Night Life</li>
+            <li>Sea Food</li>
+        </ul>
+    </ul>
+        <li>Araku - Vizag</li>
+        <ul>
+            <li>Scenaries</li>
+            <li>Bamboo Chicken</li>
+        </ul>
+</ul>
+
+<a href=Aboutme.html><h3>About Myself</h3></a>
+
+<hr>
+
+<h3>Table</h3>
+<p>This section will tell the intresting foods that you must try.</p>
+
+<table border="2" cellspacing="2" width=25% height=40% >
+    <tr>
+        <th align="center">Food</th>
+        <th align="center">Place</th>
+        <th align="center">Price</th>
+    </tr>
+  <tr>
+        <td align="center">Biryani</td>
+        <td align="center">Hyderabad</td>
+        <td align="center">10$</td>
+  </tr>
+  <tr>
+        <td align="center">Kaju barfi</td>
+        <td align="center">Rajahmundry</td>
+        <td align="center">5$</td>
+  </tr>
+  <tr>
+    <td align="center">Dosa</td>
+    <td align="center">Rajahmundry</td>
+    <td align="center">2$</td>
+</tr>
+<tr>
+    <td align="center">Chaat</td>
+    <td align="center">Rajahmundry</td>
+    <td align="center">1$</td>
+</tr> 
+</table>
+
+
+
 </body>
 </html>
