--- a/bonus.html
+++ b/bonus.html
@@ -9,9 +9,9 @@
         <ul>
             <li>Genius level intellect</li>
             <li>Expert strategist</li>
-            <li> he is a self centered businessman and rival to tony stark</li>
+            <li>He is a self centered businessman and rival to tony stark</li>
         </ul>
-        <img src="JustinHammerHandbook.png" width="50" height="50">
+        <img src="JustinHammerHandbook.png" width="10%" height="10%">
         
     </body>
 </html>
